--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ name = "dhcp_server_bin"
 path = "src/main.rs"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7.18"
